feat<auth> upgrade preAuth